crates/service/tests/completion/snapshots/features__completion__func__extern_idx_func_incomplete.snap
---
source: crates/service/tests/completion/func.rs
expression: response
---
[
  {
    "label": "$func",
    "labelDetails": {
      "description": "[] -> []"
    },
    "kind": 3,
    "detail": "(func $func)",
    "documentation": {
      "kind": "markdown",
      "value": ""
    },
    "textEdit": {
      "range": {
        "start": {
          "line": 2,
          "character": 18
        },
        "end": {
          "line": 2,
          "character": 20
        }
      },
      "newText": "$func"
    }
  }
]
