crates/service/tests/completion/snapshots/features__completion__func__label_details.snap
---
source: crates/service/tests/completion/func.rs
expression: response
---
[
  {
    "label": "0",
    "labelDetails": {
      "description": "[] -> []"
    },
    "kind": 3,
    "detail": "(func)",
    "documentation": {
      "kind": "markdown",
      "value": ""
    }
  },
  {
    "label": "$f1",
    "labelDetails": {
      "description": "[i32, i64] -> [i32, i64, f32]"
    },
    "kind": 3,
    "detail": "(func $f1 (param i32) (param $p1 i64) (result i32) (result i64) (result f32))",
    "documentation": {
      "kind": "markdown",
      "value": ""
    }
  },
  {
    "label": "$f2",
    "labelDetails": {
      "description": "[i32, i64] -> [i32, f32]"
    },
    "kind": 3,
    "detail": "(func $f2 (param i32) (param i64) (result i32) (result f32))",
    "documentation": {
      "kind": "markdown",
      "value": ""
    }
  },
  {
    "label": "$f3",
    "labelDetails": {
      "description": "[i32, i64] -> []"
    },
    "kind": 3,
    "detail": "(func $f3 (param i32) (param i64))",
    "documentation": {
      "kind": "markdown",
      "value": ""
    }
  },
  {
    "label": "$f4",
    "labelDetails": {
      "description": "[] -> [i32, f32]"
    },
    "kind": 3,
    "detail": "(func $f4 (result i32) (result f32))",
    "documentation": {
      "kind": "markdown",
      "value": ""
    }
  }
]
