crates/service/tests/completion/snapshots/features__completion__func__module_field_start_incomplete.snap
---
source: crates/service/tests/completion/func.rs
expression: response
---
[
  {
    "label": "$func",
    "kind": 3,
    "detail": "(func $func)",
    "documentation": {
      "kind": "markdown",
      "value": ""
    },
    "insertText": "func"
  }
]
