crates/service/tests/completion/snapshots/features__completion__func__ref_func.snap
---
source: crates/service/tests/completion/func.rs
expression: response
---
[
  {
    "label": "0",
    "kind": 3,
    "documentation": {
      "kind": "markdown",
      "value": "```wat\n(func)\n```"
    }
  },
  {
    "label": "$func",
    "kind": 3,
    "documentation": {
      "kind": "markdown",
      "value": "```wat\n(func $func)\n```"
    }
  }
]
